<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/homemen"
        android:icon="@drawable/baseline_home_24"/>

<!--    <item-->
<!--        android:id="@+id/articles"-->
<!--        android:title="@string/article"-->
<!--        android:icon="@drawable/article_45"/>-->

    <item
        android:id="@+id/shorts"
        android:title="@string/shorts"
        android:icon="@drawable/shorts_icon"/>

    <item
        android:id="@+id/videos"
        android:title="@string/video"
        android:icon="@drawable/baseline_video_library_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>