<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/ProfFrag"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Settings"
            android:text="@string/settings"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:id="@+id/profImage"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profName"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Example@gmail.com"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profEmail"
                android:text="User Name"
                android:textColor="#CCFFFFFF"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/edit_btn"
                android:layout_marginTop="20dp"
                android:paddingStart="30dp"
                android:layout_gravity="center"
                android:background="@drawable/round_back_secondary_100"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:paddingEnd="30dp"/>


            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">


                <!-- Dark Mode / Night Mode-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightModeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/night_mode_icon">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/nightModeIcon"
                        android:text="@string/night_mode"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/switchBtn"
                        android:layout_marginEnd="0dp"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch" />


                </RelativeLayout>

                <!-- Notifications-->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/notificationIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:src="@drawable/notification_icon">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/notificationIcon"
                        android:text="@string/notification"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/notificationSwitch"/>




                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">



                <!-- Send Us a Messages-->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/messageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_private_account"
                        android:padding="12dp"
                        android:src="@drawable/message_icon">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/messageIcon"
                        android:text="@string/send_us_a_message"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/feedback"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>



                <!-- language-->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/languageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:src="@drawable/languageicon">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/languageIcon"
                        android:text="@string/languages"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/language"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:padding="15dp">




                <!-- Terms & Condition-->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/securityIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:src="@drawable/securityicon">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/securityIcon"
                        android:text="Terms &amp; Condition"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/term_con"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_icon" />


                </RelativeLayout>



            <!-- About Us-->
             <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/AboutUsIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_back_security"
                    android:padding="12dp"
                    android:src="@drawable/message_icon">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/AboutUsIcon"
                    android:text="@string/about_us"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/aboutus"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right_arrow_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>



             </RelativeLayout>


                <!-- FAQs-->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/faqIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/faq_icon">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/faqIcon"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/pri_pol"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>